# AVIONIC

./: .gitignore  ACKNOWLEDGEMENTS  README.md  demo_ASL_TGV_Recon.m  demo_avionic.m  demo_avionic_cart.m  demo_avionic_cine.sh  demo_avionic_perf.sh
CUDA/: .gitignore  CMakeLists.txt
CUDA/buildqt/: CMakeCache.txt  ICTGV.cbp  Makefile  cmake_install.cmake
CUDA/buildqt/doc/: Makefile  cmake_install.cmake
CUDA/buildqt/include/: Makefile  cmake_install.cmake
CUDA/buildqt/src/: Makefile  cmake_install.cmake
CUDA/cmake_modules/: FindAGILE.cmake  FindGPUNUFFT.cmake
CUDA/config/: default.cfg  default_cine.cfg  default_noncart.cfg  default_perf.cfg
CUDA/doc/: CMakeLists.txt  Doxyfile  SiemenShiDesc.txt  SiemensIhiDesc.txt  SiemensParsingReferences.txt  mainpage.dox  memory_estimation.ods
CUDA/include/: .utils.h.swp  CMakeLists.txt  asltgv2recon4d.h  base_operator.h  cartesian_coil_construction.h  cartesian_operator.h  cartesian_operator3d.h  cartesian_operator4d.h  cartesian_operator5d.h  cg_forward_operation.h  cg_forward_operation_BS.h  coil_construction.h  config_dir.h  config_dir.h.cmake  dicom_reader.h  h1_recon.h  ictgv2.h  ictv.h  ismrmrd_reader.h  noncartesian_coil_construction.h  noncartesian_operator.h  noncartesian_operator3d.h  options_parser.h  pd_recon.h  raw_data_preparation.h  raw_data_reader.h  siemens_vd11_reader.h  tgv2.h  tgv2_3d.h  tv.h  tv_temp.h  types.h  utils.h
CUDA/src/: .CMakeLists.txt.swp  .main.cpp.swo  .main.cpp.swp  .options_parser.cpp.swp  .raw_data_preparation.cpp.swp  .utils.cpp.swp  CMakeLists.txt  asltgv2recon4d.cpp  base_operator.cpp  cartesian_coil_construction.cpp  cartesian_operator.cpp  cartesian_operator3d.cpp  cartesian_operator4d.cpp  cartesian_operator5d.cpp  coil_construction.cpp  dicom_reader.cpp  h1_recon.cpp  ictgv2.cpp  ictv.cpp  ismrmrd_reader.cpp  main.cpp  main.cpp.autosave  main_old.cpp  noncartesian_coil_construction.cpp  noncartesian_operator.cpp  noncartesian_operator3d.cpp  options_parser.cpp  pd_recon.cpp  raw_data_preparation.cpp  raw_data_reader.cpp  siemens_vd11_reader.cpp  tgv2.cpp  tgv2_3d.cpp  tv.cpp  tv_temp.cpp  utils.cpp
CUDA/test/: CMakeLists.txt  cartesian_operator.cc  coil_construction.cc  derivatives.cc  dicom.cc  fft.cc  ictgv2.cc  io.cc  ismrmrd.cc  noncartesian_operator.cc  options_parser.cc  test_utils.h  tgv2.cc  tv.cc  utils.cc
CUDA/test/data/dicom/: test.dcm
matlab/: asl_matlab_gpu.m  avionic_matlab_gpu.m  avionic_matlab_gpu_noncart.m  b1_from_u_h1_direct.m  b1_grad_opt.m  backward_opt.m  backward_opt_noncart.m  backward_opt_noncart_gpu.m  bart_grasp.m  bdiv_1.m  bdiv_3_3.m  bdiv_t.m  caipirinha.m  coil_construction_opt.m  coil_construction_opt_noncart.m  estimate_Memory.m  fdiv_2.m  fdiv_3_6.m  fft2c.m  fft3c.m  fgrad_1.m  fgrad_3_1.m  fgrad_t.m  forward_opt.m  forward_opt_noncart.m  forward_opt_noncart_gpu.m  getNorm.m  get_ictgv2.m  get_sos_crec_opt.m  get_sos_crec_opt_noncart.m  get_sp_bdif.m  get_sp_fdif.m  get_tgv2.m  get_tv.m  get_weights_3d.m  getopnorm.m  goldcmp.m  gstar_ictgv2_dmri.m  gstar_ictgv2_dmri_noncart.m  gstar_tgv2_dmri.m  (+49 more)
python/: README  bin2cfl.py  bin2dcm.py  h52matlab.py  h5rave2bin.py  show_avionic.py  utils.py  utils_gen.py
shell/: bart_grasp.sh
